// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndpointForm component renders correctly 1`] = `
<Connect(ReduxForm)>
  <Connect(ReduxForm)
    editing={false}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "name": "mock-name",
        "oauth_client_endpoints": Object {},
        "oauth_endpoints": Object {},
        "token_strategy": Object {
          "name": "mock-name",
        },
      }
    }
    schema={
      Object {
        "cors_meta": Object {
          "all_methods": Array [
            "ALL",
            "CONNECT",
            "DELETE",
            "GET",
            "HEAD",
            "OPTIONS",
            "POST",
            "PUT",
            "PATCH",
          ],
          "domains": Array [
            "*",
          ],
          "enabled": true,
          "exposed_headers": Array [
            "X-Debug-Token",
            "X-Debug-Token-Link",
          ],
          "methods": Array [],
          "request_headers": Array [
            "Origin",
            "Authorization",
            "Content-Type",
          ],
        },
        "name": "",
        "oauth_client_endpoints": Object {
          "create": Object {
            "all_methods": Array [
              "POST",
            ],
            "append_path": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "remove": Object {
            "all_methods": Array [
              "DELETE",
            ],
            "append_path": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
        },
        "oauth_endpoints": Object {
          "authorize": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "introspect": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "revoke": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "token": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
        },
        "rate_limit": Object {
          "enabled": false,
          "limit": Object {
            "labels": Array [
              "Seconds",
              "Minutes",
              "Hours",
            ],
            "unit": "",
            "units": Array [
              "S",
              "M",
              "H",
            ],
            "value": 0,
          },
        },
        "token_strategy": Object {
          "name": "",
          "settings": Array [],
          "strategies": Array [
            Object {
              "name": "jwt",
              "settings": Array [
                Object {
                  "alg": "",
                  "key": "",
                },
              ],
            },
            Object {
              "name": "introspection",
              "settings": Object {
                "auth_header_type": "",
                "use_oauth_header": false,
              },
            },
          ],
        },
      }
    }
  />
</Connect(ReduxForm)>
`;

exports[`EndpointForm component renders correctly if property \`editing\` is passed 1`] = `
<Connect(ReduxForm)>
  <Connect(ReduxForm)
    editing={true}
    handleSubmit={[Function]}
    initialValues={
      Object {
        "name": "mock-name",
        "oauth_client_endpoints": Object {},
        "oauth_endpoints": Object {},
        "token_strategy": Object {
          "name": "mock-name",
        },
      }
    }
    schema={
      Object {
        "cors_meta": Object {
          "all_methods": Array [
            "ALL",
            "CONNECT",
            "DELETE",
            "GET",
            "HEAD",
            "OPTIONS",
            "POST",
            "PUT",
            "PATCH",
          ],
          "domains": Array [
            "*",
          ],
          "enabled": true,
          "exposed_headers": Array [
            "X-Debug-Token",
            "X-Debug-Token-Link",
          ],
          "methods": Array [],
          "request_headers": Array [
            "Origin",
            "Authorization",
            "Content-Type",
          ],
        },
        "name": "",
        "oauth_client_endpoints": Object {
          "create": Object {
            "all_methods": Array [
              "POST",
            ],
            "append_path": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "remove": Object {
            "all_methods": Array [
              "DELETE",
            ],
            "append_path": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
        },
        "oauth_endpoints": Object {
          "authorize": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "introspect": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "revoke": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
          "token": Object {
            "all_methods": Array [
              "ALL",
              "CONNECT",
              "DELETE",
              "GET",
              "HEAD",
              "OPTIONS",
              "POST",
              "PUT",
              "PATCH",
            ],
            "append_path": false,
            "enable_load_balancing": false,
            "hosts": Array [],
            "insecure_skip_verify": false,
            "listen_path": "",
            "methods": Array [],
            "preserve_host": false,
            "strip_path": false,
            "upstream_url": "",
            "upstreams": Object {
              "balancing": "",
              "options": Array [
                Object {
                  "balancing": "roundrobin",
                  "targets": Array [
                    Object {
                      "target": "",
                    },
                  ],
                },
                Object {
                  "balancing": "weight",
                  "targets": Array [
                    Object {
                      "target": "",
                      "weight": 0,
                    },
                  ],
                },
              ],
              "targets": Array [],
            },
          },
        },
        "rate_limit": Object {
          "enabled": false,
          "limit": Object {
            "labels": Array [
              "Seconds",
              "Minutes",
              "Hours",
            ],
            "unit": "",
            "units": Array [
              "S",
              "M",
              "H",
            ],
            "value": 0,
          },
        },
        "token_strategy": Object {
          "name": "",
          "settings": Array [],
          "strategies": Array [
            Object {
              "name": "jwt",
              "settings": Array [
                Object {
                  "alg": "",
                  "key": "",
                },
              ],
            },
            Object {
              "name": "introspection",
              "settings": Object {
                "auth_header_type": "",
                "use_oauth_header": false,
              },
            },
          ],
        },
      }
    }
  />
</Connect(ReduxForm)>
`;
